Work around Apache2 DAV module's insistence on trailing slashes at the end of requests on directories.

BUG:119066

svn path=/branches/KDE/3.5/kdelibs/; revision=493783